; ModuleID = '/home/carl/AnghaBench/lab/engine/code/renderergl2/extr_tr_vbo.c_VaoCache_RecycleIndexBuffer.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/renderergl2/extr_tr_vbo.c_VaoCache_RecycleIndexBuffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i64, i64, %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32, i32 }

@GL_ELEMENT_ARRAY_BUFFER = common dso_local global i32 0, align 4
@vc = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@GL_DYNAMIC_DRAW = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @VaoCache_RecycleIndexBuffer() #0 {
  %1 = load i32, i32* @GL_ELEMENT_ARRAY_BUFFER, align 4
  %2 = load %struct.TYPE_3__*, %struct.TYPE_3__** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @vc, i32 0, i32 3), align 8
  %3 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %2, i32 0, i32 1
  %4 = load i32, i32* %3, align 4
  %5 = call i32 @qglBindBuffer(i32 %1, i32 %4)
  %6 = load i32, i32* @GL_ELEMENT_ARRAY_BUFFER, align 4
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @vc, i32 0, i32 3), align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @GL_DYNAMIC_DRAW, align 4
  %11 = call i32 @qglBufferData(i32 %6, i32 %9, i32* null, i32 %10)
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @vc, i32 0, i32 2), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @vc, i32 0, i32 1), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @vc, i32 0, i32 0), align 8
  ret void
}

declare dso_local i32 @qglBindBuffer(i32, i32) #1

declare dso_local i32 @qglBufferData(i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
